@@ -1,3 +1,8 @@
+*uniloader-21.04.8 (10 Nov 2021)
+
+  10 Nov 2021; Agostino Sarubbo <ago@gentoo.org> +uniloader-21.04.8.ebuild:
+  app-metrics/uniloader: version bump to 21.04.8
+
 *uniloader-21.04.6 (20 Sep 2021)
 
   20 Sep 2021; Agostino Sarubbo <ago@gentoo.org> +uniloader-21.04.6.ebuild,
